@startuml

title __WALL's Class Diagram__\n

  namespace enstabretagne.travaux_diriges.TD_corrige.MouvementCollisionAvoidance {
    namespace SimEntity.Wall {
      class enstabretagne.travaux_diriges.TD_corrige.MouvementCollisionAvoidance.SimEntity.Wall.Wall {
          ~ borders : HashMap<String, List<Point3D>>
          ~ murs : List<Node>
          + Wall()
          + canSeeTable()
          + generateMurs()
          + generateMursWithDistanceOfSecurity()
          + getAcceleration()
          + getAccelerationRotationXYZ()
          + getBounds()
          + getBounds()
          + getColor()
          + getGroundBorder()
          + getHeight()
          + getPosition()
          + getRotationSpeedXYZ()
          + getRotationXYZ()
          + getSpeed()
          + getType()
          + getVitesse()
          + getVitesseRotationXYZ()
          + getWallShape()
          + getWalls()
          + getWidth()
          + onParentSet()
          # AfterActivate()
          # AfterDeactivated()
          # AfterTerminated()
          # BeforeActivating()
          # BeforeDeactivating()
          # initializeSimEntity()
      }
    }
  }
  

  namespace enstabretagne.travaux_diriges.TD_corrige.MouvementCollisionAvoidance {
    namespace SimEntity.Wall {
      class enstabretagne.travaux_diriges.TD_corrige.MouvementCollisionAvoidance.SimEntity.Wall.WallFeatures {
          - color : Color
          - height : double
          - width : double
          + WallFeatures()
          + getCouleur()
          + getHeight()
          + getType()
          + getWidth()
      }
    }
  }
  

  namespace enstabretagne.travaux_diriges.TD_corrige.MouvementCollisionAvoidance {
    namespace SimEntity.Wall {
      enum WALL_TYPE {
        CHAIR
        FLOOR
        INSIDE_WALL
        OUTSIDE_WALL
        TABLE
      }
    }
  }
  

  namespace enstabretagne.travaux_diriges.TD_corrige.MouvementCollisionAvoidance {
    namespace SimEntity.Wall {
      class enstabretagne.travaux_diriges.TD_corrige.MouvementCollisionAvoidance.SimEntity.Wall.WallInit {
          - name : String
          - path : List<Point3D>
          - posInit : Point3D
          - rotationXYZInit : Point3D
          + WallInit()
          + generateMurs()
          + getName()
          + getPath()
          + getPosInit()
          + getRotationXYZInit()
      }
    }
  }
  

  enstabretagne.travaux_diriges.TD_corrige.MouvementCollisionAvoidance.SimEntity.Wall.Wall .up.|> enstabretagne.monitor.interfaces.IMovable
  enstabretagne.travaux_diriges.TD_corrige.MouvementCollisionAvoidance.SimEntity.Wall.Wall .up.|> enstabretagne.travaux_diriges.TD_corrige.MouvementCollisionAvoidance.SimEntity.Wall.Representation3D.IWall3D
  enstabretagne.travaux_diriges.TD_corrige.MouvementCollisionAvoidance.SimEntity.Wall.Wall -up-|> enstabretagne.simulation.components.implementation.SimEntity
  enstabretagne.travaux_diriges.TD_corrige.MouvementCollisionAvoidance.SimEntity.Wall.Wall o-- enstabretagne.travaux_diriges.TD_corrige.MouvementCollisionAvoidance.SimEntity.Wall.WallFeatures : wFeat
  enstabretagne.travaux_diriges.TD_corrige.MouvementCollisionAvoidance.SimEntity.Wall.Wall o-- enstabretagne.travaux_diriges.TD_corrige.MouvementCollisionAvoidance.SimEntity.Wall.WallInit : wIni
  enstabretagne.travaux_diriges.TD_corrige.MouvementCollisionAvoidance.SimEntity.Wall.WallFeatures -up-|> enstabretagne.simulation.components.data.SimFeatures
  enstabretagne.travaux_diriges.TD_corrige.MouvementCollisionAvoidance.SimEntity.Wall.WallFeatures o-- enstabretagne.travaux_diriges.TD_corrige.MouvementCollisionAvoidance.SimEntity.Wall.WallFeatures.WALL_TYPE : type
  enstabretagne.travaux_diriges.TD_corrige.MouvementCollisionAvoidance.SimEntity.Wall.WallFeatures +-down- enstabretagne.travaux_diriges.TD_corrige.MouvementCollisionAvoidance.SimEntity.Wall.WallFeatures.WALL_TYPE
  enstabretagne.travaux_diriges.TD_corrige.MouvementCollisionAvoidance.SimEntity.Wall.WallInit -up-|> enstabretagne.simulation.components.data.SimInitParameters


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
